--- a/index.html
+++ b/index.html
@@ -10,7 +10,100 @@
 <body>
     <h1 class="main-title">OddPepes Roadmap</h1>
     <div class="slider">
-        <!-- Slides -->
+        <h1 class="main-title">OddPepes Roadmap</h1>
+<div class="slider">
+  <div class="slide">
+    <div class="slide-container">
+      <h2 class="slide-Title">Q1 - 2024</h2>
+      <div class="slide-description">
+        <ul>
+          <li>Release Founders Deck.</li>
+          <li>initiate test Airdrop/ initial Airdrop</li>
+          <li>grow community and team with incentives</li>
+          <li>oddpepes testnet to livenet</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="slide">
+    <div class="slide-container">
+      <h2 class="slide-Title">Q2 - 2021</h2>
+      <div class="slide-description">
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li>Nunc blandit justo ac dolor lobortis suscipit. </li>
+          <li>Et tincidunt lectus porta sit amet. </li>
+          <li>Nulla dignissim ligula nec faucibus feugiat. </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="slide">
+    <div class="slide-container">
+      <h2 class="slide-Title">Q3 - 2021</h2>
+      <div class="slide-description">
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li>Nunc blandit justo ac dolor lobortis suscipit. </li>
+          <li>Et tincidunt lectus porta sit amet. </li>
+          <li>Nulla dignissim ligula nec faucibus feugiat. </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="slide active">
+    <div class="slide-container">
+      <h2 class="slide-Title">Q4 - 2021</h2>
+      <div class="slide-description">
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li>Nunc blandit justo ac dolor lobortis suscipit. </li>
+          <li>Et tincidunt lectus porta sit amet. </li>
+          <li>Nulla dignissim ligula nec faucibus feugiat. </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="slide">
+    <div class="slide-container">
+      <h2 class="slide-Title">Q1 - 2022</h2>
+      <div class="slide-description">
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li>Nunc blandit justo ac dolor lobortis suscipit. </li>
+          <li>Et tincidunt lectus porta sit amet. </li>
+          <li>Nulla dignissim ligula nec faucibus feugiat. </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="slide">
+    <div class="slide-container">
+      <h2 class="slide-Title">Q2 - 2022</h2>
+      <div class="slide-description">
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li>Nunc blandit justo ac dolor lobortis suscipit. </li>
+          <li>Et tincidunt lectus porta sit amet. </li>
+          <li>Nulla dignissim ligula nec faucibus feugiat. </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="slide">
+    <div class="slide-container">
+      <h2 class="slide-Title">Q3 - 2022</h2>
+      <div class="slide-description">
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li>Nunc blandit justo ac dolor lobortis suscipit. </li>
+          <li>Et tincidunt lectus porta sit amet. </li>
+          <li>Nulla dignissim ligula nec faucibus feugiat. </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
     </div>
     <script src="script.js"></script>
 </body>
