--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <h1 class="main-title">OddPepes Roadmap</h1>
+    <h1 class="main-title">OddPepes Roadmap 2024</h1>
     <div class="slider">
         <div class="slide active">
             <div class="slide-container">
